tests/fail/t07.e
function does not match prototype
